# AudioVisualizer

./: .gitignore  CMakeLists.txt  README.md  settings.ini
include/: AudioCapture.h  AudioProcessor.h  FFT.h  INIFileParser.h  SystemTrayMenu.h  TransparentWindow.h
src/: AudioCapture.cpp  AudioProcessor.cpp  FFT.cpp  INIFileParser.cpp  SystemTrayMenu.cpp  TransparentWindow.cpp  main.cpp
